--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/googlemaps": "^3.39.13",
     "angular-cli-ghpages": "^1.0.0-rc.1",
     "rxjs": "~6.6.0",
+    "sweetalert": "^2.1.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
